--- a/test.ipynb
+++ b/test.ipynb
@@ -114,8 +114,15 @@
     }
    ],
    "source": [
-    "s = SpeakerNet(model='X_vector', trainfunc='softmax', nPerSpeaker=1, Syncbatch=False, n_mels=40, nOut=192, spec_aug=False, nClasses=5994)"
+    "s = SpeakerNet(model='X_vector', trainfunc='softmax', nPerSpeaker=1, Syncbatch=False, n_mels=40, nOut=192, spec_aug=False, nClasses=5994, additional_model=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -139,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.fc.weight', '__L__.fc.bias'])"
+       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.fc.weight', '__L__.fc.bias', '__L__.encoder_layers.self_attn.in_proj_weight', '__L__.encoder_layers.self_attn.in_proj_bias', '__L__.encoder_layers.self_attn.out_proj.weight', '__L__.encoder_layers.self_attn.out_proj.bias', '__L__.encoder_layers.linear1.weight', '__L__.encoder_layers.linear1.bias', '__L__.encoder_layers.linear2.weight', '__L__.encoder_layers.linear2.bias', '__L__.encoder_layers.norm1.weight', '__L__.encoder_layers.norm1.bias', '__L__.encoder_layers.norm2.weight', '__L__.encoder_layers.norm2.bias', '__L__.transformer_encoder.layers.0.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.0.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.0.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.0.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.0.linear1.weight', '__L__.transformer_encoder.layers.0.linear1.bias', '__L__.transformer_encoder.layers.0.linear2.weight', '__L__.transformer_encoder.layers.0.linear2.bias', '__L__.transformer_encoder.layers.0.norm1.weight', '__L__.transformer_encoder.layers.0.norm1.bias', '__L__.transformer_encoder.layers.0.norm2.weight', '__L__.transformer_encoder.layers.0.norm2.bias', '__L__.transformer_encoder.layers.1.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.1.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.1.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.1.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.1.linear1.weight', '__L__.transformer_encoder.layers.1.linear1.bias', '__L__.transformer_encoder.layers.1.linear2.weight', '__L__.transformer_encoder.layers.1.linear2.bias', '__L__.transformer_encoder.layers.1.norm1.weight', '__L__.transformer_encoder.layers.1.norm1.bias', '__L__.transformer_encoder.layers.1.norm2.weight', '__L__.transformer_encoder.layers.1.norm2.bias'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2155,6 +2162,185 @@
    ],
    "source": [
     "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    r\"\"\"Inject some information about the relative or absolute position of the tokens in the sequence.\n",
+    "        The positional encodings have the same dimension as the embeddings, so that the two can be summed.\n",
+    "        Here, we use sine and cosine functions of different frequencies.\n",
+    "    .. math:\n",
+    "        \\text{PosEncoder}(pos, 2i) = sin(pos/10000^(2i/d_model))\n",
+    "        \\text{PosEncoder}(pos, 2i+1) = cos(pos/10000^(2i/d_model))\n",
+    "        \\text{where pos is the word position and i is the embed idx)\n",
+    "    Args:\n",
+    "        d_model: the embed dim (required).\n",
+    "        dropout: the dropout value (default=0.1).\n",
+    "        max_len: the max. length of the incoming sequence (default=5000).\n",
+    "    Examples:\n",
+    "        >>> pos_encoder = PositionalEncoding(d_model)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, d_model, dropout=0.1, max_len=5000):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        pe = pe.unsqueeze(0).transpose(0, 1)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        r\"\"\"Inputs of forward function\n",
+    "        Args:\n",
+    "            x: the sequence fed to the positional encoder model (required).\n",
+    "        Shape:\n",
+    "            x: [sequence length, batch size, embed dim]\n",
+    "            output: [sequence length, batch size, embed dim]\n",
+    "        Examples:\n",
+    "            >>> output = pos_encoder(x)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        x = x + self.pe[:x.size(0), :]\n",
+    "        return self.dropout(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerModel(nn.Module):\n",
+    "    \"\"\"Container module with an encoder, a recurrent or transformer module, and a decoder.\"\"\"\n",
+    "\n",
+    "    def __init__(self, ntoken, ninp, nhead, nhid, nlayers, dropout=0.5):\n",
+    "        super(TransformerModel, self).__init__()\n",
+    "        try:\n",
+    "            from torch.nn import TransformerEncoder, TransformerEncoderLayer\n",
+    "        except BaseException as e:\n",
+    "            raise ImportError('TransformerEncoder module does not exist in PyTorch 1.1 or '\n",
+    "                              'lower.') from e\n",
+    "        self.model_type = 'Transformer'\n",
+    "        self.src_mask = None\n",
+    "        self.pos_encoder = PositionalEncoding(ninp, dropout)\n",
+    "        encoder_layers = TransformerEncoderLayer(ninp, nhead, nhid, dropout)\n",
+    "        self.transformer_encoder = TransformerEncoder(encoder_layers, nlayers)\n",
+    "        self.encoder = nn.Embedding(ntoken, ninp)\n",
+    "        self.ninp = ninp\n",
+    "        self.decoder = nn.Linear(ninp, ntoken)\n",
+    "\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def _generate_square_subsequent_mask(self, sz):\n",
+    "        mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
+    "        mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
+    "        return mask\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        initrange = 0.1\n",
+    "        nn.init.uniform_(self.encoder.weight, -initrange, initrange)\n",
+    "        nn.init.zeros_(self.decoder.bias)\n",
+    "        nn.init.uniform_(self.decoder.weight, -initrange, initrange)\n",
+    "\n",
+    "    def forward(self, src, has_mask=True):\n",
+    "        if has_mask:\n",
+    "            device = src.device\n",
+    "            if self.src_mask is None or self.src_mask.size(0) != len(src):\n",
+    "                mask = self._generate_square_subsequent_mask(len(src)).to(device)\n",
+    "                self.src_mask = mask\n",
+    "        else:\n",
+    "            self.src_mask = None\n",
+    "\n",
+    "        src = self.encoder(src) * math.sqrt(self.ninp)\n",
+    "        src = self.pos_encoder(src)\n",
+    "        output = self.transformer_encoder(src, self.src_mask)\n",
+    "        output = self.decoder(output)\n",
+    "        return F.log_softmax(output, dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import TransformerEncoder, TransformerEncoderLayer\n",
+    "\n",
+    "encoder_layers = TransformerEncoderLayer(d_model=192, nhead=2, dim_feedforward=192, batch_first=True)\n",
+    "transformer_encoder = TransformerEncoder(encoder_layers, num_layers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.ones([3, 300, 192])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.7252, -0.3624, -0.1705,  ..., -1.2065,  0.2259,  1.1100],\n",
+       "         [-0.8106, -0.1666, -0.4267,  ..., -1.6859,  0.2788,  0.8858],\n",
+       "         [-1.0156, -0.5687, -0.2050,  ..., -1.3832,  0.2940,  1.1397],\n",
+       "         ...,\n",
+       "         [-0.6295, -0.4455, -0.2690,  ..., -1.5202,  0.2469,  1.4058],\n",
+       "         [-0.4043, -0.3343,  0.5362,  ..., -1.5448, -0.5902,  1.1593],\n",
+       "         [-0.6198, -0.5431, -0.6877,  ..., -1.5508,  0.0735,  1.3879]],\n",
+       "\n",
+       "        [[-0.6328, -0.0639, -0.1967,  ..., -1.4941, -0.1667,  1.3560],\n",
+       "         [-0.7775, -0.0826, -0.2862,  ..., -0.9967, -0.0380, -0.1494],\n",
+       "         [-0.8379, -0.6063,  0.3712,  ..., -1.2924, -0.2112,  1.7677],\n",
+       "         ...,\n",
+       "         [-0.0674, -0.2177, -0.1451,  ..., -1.7034,  0.0452,  1.2896],\n",
+       "         [-0.7614, -0.4142, -0.6569,  ..., -1.5870,  0.1661,  1.6453],\n",
+       "         [-0.7321, -0.3188, -0.4283,  ..., -1.5319,  0.0111,  1.2844]],\n",
+       "\n",
+       "        [[-0.4867, -0.3306, -0.4293,  ..., -1.2913,  0.3869,  1.0888],\n",
+       "         [-0.5574, -0.4477, -0.2591,  ..., -1.3477, -1.1022,  1.2255],\n",
+       "         [-0.7232, -0.5176,  0.3193,  ..., -1.3625,  0.1137,  0.8407],\n",
+       "         ...,\n",
+       "         [-0.4713, -0.3337, -0.4398,  ..., -1.5492,  0.0142,  1.1003],\n",
+       "         [-0.6702, -0.4170, -0.3313,  ..., -1.5915, -0.2970,  0.9538],\n",
+       "         [ 0.3935, -0.4093, -0.5211,  ..., -1.4440, -0.9280,  1.5178]]],\n",
+       "       grad_fn=<NativeLayerNormBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer_encoder(a)"
    ]
   }
  ],
