--- a/create_dataset_2.ipynb
+++ b/create_dataset_2.ipynb
@@ -27844,6 +27844,20 @@
     "    for i in ver_new:\n",
     "        f.write(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# simplize the ver_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
