--- a/create_dataset_2.ipynb
+++ b/create_dataset_2.ipynb
@@ -27854,10 +27854,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# prune the ver_list_G7.txt\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G7_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G7_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G7_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "# read ver_list_G7_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G7_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189754"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# process ver_list_G8_VER.txt as previous code\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G8_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G8_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G8_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "# read ver_list_G8_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G8_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189435"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# process ver_list_G9_VER.txt as previous code\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G9_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G9_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G9_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "# read ver_list_G9_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G9_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189964"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# process ver_list_G10_VER.txt as previous code\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G10_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G10_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G10_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "# read ver_list_G10_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G10_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190235"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# process ver_list_G11_VER.txt as previous code\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G11_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G11_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G11_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "# read ver_list_G11_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G11_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190370"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# process ver_list_G12_VER.txt as previous code\n",
+    "ver_ori_path = '/nvme/zhiyong/fllearn_data/ver_list_G12_VER.txt'\n",
+    "with open(ver_ori_path, 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "\n",
+    "# write ver_ori to ver_list_G12_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G12_VER_simp.txt', 'w') as f:\n",
+    "    for i in ver_ori:\n",
+    "        # check if i start with 1\n",
+    "        if i[0] == '1':\n",
+    "            f.write(i)\n",
+    "        else:\n",
+    "            # write to the file with probability 0.05\n",
+    "            if np.random.rand() < 0.05:\n",
+    "                f.write(i)\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "# read ver_list_G12_VER_simp.txt\n",
+    "with open('/nvme/zhiyong/fllearn_data/ver_list_G12_VER_simp.txt', 'r') as f:\n",
+    "    ver_ori = f.readlines()\n",
+    "len(ver_ori)"
+   ]
   }
  ],
  "metadata": {
