--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,21 +114,21 @@
     }
    ],
    "source": [
-    "lists = SpeakerNet(model='X_vector', trainfunc='softmax', nPerSpeaker=1, Syncbatch=False, n_mels=40, nOut=192, spec_aug=False, nClasses=5994, additional_model=[True,True])"
+    "s = SpeakerNet(model='X_vector', trainfunc='softmax', nPerSpeaker=1, Syncbatch=False, n_mels=40, nOut=192, spec_aug=False, nClasses=5994, additional_model=[True,True])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "30"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.fc.weight', '__L__.fc.bias', '__L__.encoder_layers.self_attn.in_proj_weight', '__L__.encoder_layers.self_attn.in_proj_bias', '__L__.encoder_layers.self_attn.out_proj.weight', '__L__.encoder_layers.self_attn.out_proj.bias', '__L__.encoder_layers.linear1.weight', '__L__.encoder_layers.linear1.bias', '__L__.encoder_layers.linear2.weight', '__L__.encoder_layers.linear2.bias', '__L__.encoder_layers.norm1.weight', '__L__.encoder_layers.norm1.bias', '__L__.encoder_layers.norm2.weight', '__L__.encoder_layers.norm2.bias', '__L__.transformer_encoder.layers.0.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.0.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.0.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.0.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.0.linear1.weight', '__L__.transformer_encoder.layers.0.linear1.bias', '__L__.transformer_encoder.layers.0.linear2.weight', '__L__.transformer_encoder.layers.0.linear2.bias', '__L__.transformer_encoder.layers.0.norm1.weight', '__L__.transformer_encoder.layers.0.norm1.bias', '__L__.transformer_encoder.layers.0.norm2.weight', '__L__.transformer_encoder.layers.0.norm2.bias', '__L__.transformer_encoder.layers.1.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.1.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.1.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.1.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.1.linear1.weight', '__L__.transformer_encoder.layers.1.linear1.bias', '__L__.transformer_encoder.layers.1.linear2.weight', '__L__.transformer_encoder.layers.1.linear2.bias', '__L__.transformer_encoder.layers.1.norm1.weight', '__L__.transformer_encoder.layers.1.norm1.bias', '__L__.transformer_encoder.layers.1.norm2.weight', '__L__.transformer_encoder.layers.1.norm2.bias'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,26 +1766,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/nvme1/zhiyong/ASV_LOGS_202102/train_logs_201120/xvector(vox2)/model/model000000134.model'\n",
-    "# loaded_state = torch.load(path, map_location=\"cuda:0\")"
+    "path = '/workspace/train_logs/X_vector_trans/model/model000000134.model'\n",
+    "loaded_state = torch.load(path, map_location=\"cuda:0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.fc.weight', '__L__.fc.bias'])"
+       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.fc.weight', '__L__.fc.bias', '__L__.encoder_layers.self_attn.in_proj_weight', '__L__.encoder_layers.self_attn.in_proj_bias', '__L__.encoder_layers.self_attn.out_proj.weight', '__L__.encoder_layers.self_attn.out_proj.bias', '__L__.encoder_layers.linear1.weight', '__L__.encoder_layers.linear1.bias', '__L__.encoder_layers.linear2.weight', '__L__.encoder_layers.linear2.bias', '__L__.encoder_layers.norm1.weight', '__L__.encoder_layers.norm1.bias', '__L__.encoder_layers.norm2.weight', '__L__.encoder_layers.norm2.bias', '__L__.transformer_encoder.layers.0.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.0.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.0.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.0.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.0.linear1.weight', '__L__.transformer_encoder.layers.0.linear1.bias', '__L__.transformer_encoder.layers.0.linear2.weight', '__L__.transformer_encoder.layers.0.linear2.bias', '__L__.transformer_encoder.layers.0.norm1.weight', '__L__.transformer_encoder.layers.0.norm1.bias', '__L__.transformer_encoder.layers.0.norm2.weight', '__L__.transformer_encoder.layers.0.norm2.bias', '__L__.transformer_encoder.layers.1.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.1.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.1.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.1.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.1.linear1.weight', '__L__.transformer_encoder.layers.1.linear1.bias', '__L__.transformer_encoder.layers.1.linear2.weight', '__L__.transformer_encoder.layers.1.linear2.bias', '__L__.transformer_encoder.layers.1.norm1.weight', '__L__.transformer_encoder.layers.1.norm1.bias', '__L__.transformer_encoder.layers.1.norm2.weight', '__L__.transformer_encoder.layers.1.norm2.bias'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,16 +1803,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.W'])"
+       "odict_keys(['__S__.torchfb.0.flipped_filter', '__S__.torchfb.1.spectrogram.window', '__S__.torchfb.1.mel_scale.fb', '__S__.tdnn1.0.weight', '__S__.tdnn1.0.bias', '__S__.tdnn1.2.weight', '__S__.tdnn1.2.bias', '__S__.tdnn1.2.running_mean', '__S__.tdnn1.2.running_var', '__S__.tdnn1.2.num_batches_tracked', '__S__.tdnn2.0.weight', '__S__.tdnn2.0.bias', '__S__.tdnn2.2.weight', '__S__.tdnn2.2.bias', '__S__.tdnn2.2.running_mean', '__S__.tdnn2.2.running_var', '__S__.tdnn2.2.num_batches_tracked', '__S__.tdnn3.0.weight', '__S__.tdnn3.0.bias', '__S__.tdnn3.2.weight', '__S__.tdnn3.2.bias', '__S__.tdnn3.2.running_mean', '__S__.tdnn3.2.running_var', '__S__.tdnn3.2.num_batches_tracked', '__S__.tdnn4.0.weight', '__S__.tdnn4.0.bias', '__S__.tdnn4.2.weight', '__S__.tdnn4.2.bias', '__S__.tdnn4.2.running_mean', '__S__.tdnn4.2.running_var', '__S__.tdnn4.2.num_batches_tracked', '__S__.tdnn5.0.weight', '__S__.tdnn5.0.bias', '__S__.tdnn5.2.weight', '__S__.tdnn5.2.bias', '__S__.tdnn5.2.running_mean', '__S__.tdnn5.2.running_var', '__S__.tdnn5.2.num_batches_tracked', '__S__.pooling.linear1.weight', '__S__.pooling.linear1.bias', '__S__.pooling.linear2.weight', '__S__.pooling.linear2.bias', '__S__.embedding_layer1.linear.weight', '__S__.embedding_layer1.linear.bias', '__S__.embedding_layer1.batchnorm.weight', '__S__.embedding_layer1.batchnorm.bias', '__S__.embedding_layer1.batchnorm.running_mean', '__S__.embedding_layer1.batchnorm.running_var', '__S__.embedding_layer1.batchnorm.num_batches_tracked', '__L__.W', '__L__.encoder_layers.self_attn.in_proj_weight', '__L__.encoder_layers.self_attn.in_proj_bias', '__L__.encoder_layers.self_attn.out_proj.weight', '__L__.encoder_layers.self_attn.out_proj.bias', '__L__.encoder_layers.linear1.weight', '__L__.encoder_layers.linear1.bias', '__L__.encoder_layers.linear2.weight', '__L__.encoder_layers.linear2.bias', '__L__.encoder_layers.norm1.weight', '__L__.encoder_layers.norm1.bias', '__L__.encoder_layers.norm2.weight', '__L__.encoder_layers.norm2.bias', '__L__.transformer_encoder.layers.0.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.0.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.0.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.0.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.0.linear1.weight', '__L__.transformer_encoder.layers.0.linear1.bias', '__L__.transformer_encoder.layers.0.linear2.weight', '__L__.transformer_encoder.layers.0.linear2.bias', '__L__.transformer_encoder.layers.0.norm1.weight', '__L__.transformer_encoder.layers.0.norm1.bias', '__L__.transformer_encoder.layers.0.norm2.weight', '__L__.transformer_encoder.layers.0.norm2.bias', '__L__.transformer_encoder.layers.1.self_attn.in_proj_weight', '__L__.transformer_encoder.layers.1.self_attn.in_proj_bias', '__L__.transformer_encoder.layers.1.self_attn.out_proj.weight', '__L__.transformer_encoder.layers.1.self_attn.out_proj.bias', '__L__.transformer_encoder.layers.1.linear1.weight', '__L__.transformer_encoder.layers.1.linear1.bias', '__L__.transformer_encoder.layers.1.linear2.weight', '__L__.transformer_encoder.layers.1.linear2.bias', '__L__.transformer_encoder.layers.1.norm1.weight', '__L__.transformer_encoder.layers.1.norm1.bias', '__L__.transformer_encoder.layers.1.norm2.weight', '__L__.transformer_encoder.layers.1.norm2.bias'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
