--- a/test.ipynb
+++ b/test.ipynb
@@ -1995,65 +1995,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
-    "with open('/workspace/Federated-Averaging-PyTorch1/config.yaml') as c:\n",
+    "with open('config.yaml') as c:\n",
     "    configs = list(yaml.load_all(c, Loader=yaml.FullLoader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'global_config': {'seed': 5959,\n",
-       "   'device': 'cuda',\n",
-       "   'is_mp': False,\n",
-       "   'evaluate': True}},\n",
-       " {'data_config': {'data_path': './data/',\n",
-       "   'dataset_name': 'MNIST',\n",
-       "   'num_shards': 200,\n",
-       "   'iid': False,\n",
-       "   'fl_dataset_path': '/workspace/flearn_data'}},\n",
-       " {'fed_config': {'C': 0.6,\n",
-       "   'K': 12,\n",
-       "   'R': 500,\n",
-       "   'E': 1,\n",
-       "   'B': 10,\n",
-       "   'criterion': 'torch.nn.CrossEntropyLoss',\n",
-       "   'optimizer': 'torch.optim.SGD'}},\n",
-       " {'optim_config': {'lr': 0.01, 'momentum': 0.9}},\n",
-       " {'init_config': {'init_type': 'xavier',\n",
-       "   'init_gain': 1.0,\n",
-       "   'gpu_ids': [0, 1, 2]}},\n",
-       " {'model_config': {'name': 'CNN',\n",
-       "   'in_channels': 1,\n",
-       "   'hidden_channels': 32,\n",
-       "   'num_hiddens': 512,\n",
-       "   'num_classes': 10}},\n",
-       " {'log_config': {'log_path': './log/',\n",
-       "   'log_name': 'FL.log',\n",
-       "   'tb_port': 5252,\n",
-       "   'tb_host': '0.0.0.0'}},\n",
-       " {'eval_config': {'eval_task': 'ver',\n",
-       "   'testfile_path': '/workspace/flearn_data',\n",
-       "   'model_path': '/nvme1/zhiyong/ASV_LOGS_202102/train_logs_201120/xvector(vox2)/model/model000000134.model',\n",
-       "   'listfilename': '/workspace/flearn_data/ver_list_G12_VER.txt'}}]"
+       "{'C': 0.3,\n",
+       " 'K': 12,\n",
+       " 'R': 50,\n",
+       " 'E': 1,\n",
+       " 'B': 10,\n",
+       " 'criterion': 'torch.nn.CrossEntropyLoss',\n",
+       " 'optimizer': 'torch.optim.SGD',\n",
+       " 'non_fed_split_training': False,\n",
+       " 'centerized_training': False,\n",
+       " 'freeze_backbone': False,\n",
+       " 'continue_learning_setting': [False, 3, 30],\n",
+       " 'stagename_dict': {2: '#3.txt', 3: '#2.txt'}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "configs"
+    "configs[2][\"fed_config\"]"
    ]
   },
   {
@@ -2730,6 +2709,217 @@
    ],
    "source": [
     "a/12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Artifact0.5450810210135675'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Artifact\"+str(random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Finishing last run (ID:7hht8c8a) before initializing another..."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e118a8169a6e450c835e71cb1eedf9d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='21.106 MB of 21.116 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=0.9995…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">different-moon-31</strong> at: <a href='https://wandb.ai/greatml/FedSPK/runs/7hht8c8a' target=\"_blank\">https://wandb.ai/greatml/FedSPK/runs/7hht8c8a</a><br/>Synced 5 W&B file(s), 0 media file(s), 1 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20230308_040026-7hht8c8a/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Successfully finished last run (ID:7hht8c8a). Initializing new run:<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7508a62bb4dc40c996604b1ffaf8d82e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666894193428258, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.13.11 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.13.10"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/workspace/FedSPK/wandb/run-20230308_040556-xnfikb8h</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">floral-donkey-32</a></strong> to <a href='https://wandb.ai/greatml/FedSPK' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/greatml/FedSPK' target=\"_blank\">https://wandb.ai/greatml/FedSPK</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">https://wandb.ai/greatml/FedSPK/runs/xnfikb8h</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<wandb.sdk.wandb_artifacts.Artifact at 0x7f8eefacbbb0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "import random\n",
+    "\n",
+    "# create a random artifact\n",
+    "artifact = wandb.Artifact(name=\"Artifact\"+str(random.random()), type='model', description=\"STD: centerized training\")\n",
+    "artifact.add_file(local_path=\"/workspace/FL_log/2023-03-07_16:57:51/STD: centerized training.pth\")\n",
+    "\n",
+    "# Create a W&B Run. Replace 'job-type'.\n",
+    "run = wandb.init(project=\"FedSPK\", job_type='upload-artifacts')\n",
+    "\n",
+    "run.log_artifact(artifact)"
    ]
   },
   {
